--- a/shelter/pages/pets/style.css
+++ b/shelter/pages/pets/style.css
@@ -243,7 +243,7 @@ h6 {
   height: 35px;
   font-size: 32px;
   line-height: 110%;
-  letter-spacing: 0.053em;
+  letter-spacing: 0.06em;
   color: #545454;
 }
 
@@ -254,7 +254,7 @@ h6 {
   font-family: Arial;
   font-size: 13px;
   line-height: 100%;
-  letter-spacing: 0.0933em;
+  letter-spacing: 0.1em;
   color: #292929;
 }
 
@@ -521,7 +521,6 @@ h6 {
 
 .footer__locations-title {
   color: #fff;
-  letter-spacing: 0.065em;
 }
 
 .footer__address {
